--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "chart.js": "^4.4.0",
     "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.3.4",
     "react-multi-date-picker": "^3.3.4",
